/**
 * 
 *  Copyright:  Copyright (c) 2020, ISSuh
 * 
 */

#ifndef SRPC_CLIENT_HPP
#define SRPC_CLIENT_HPP

namespace srpc {

class TcpClient {
 public:

};

} // srpc

#endif