/**
 * 
 *  Copyright:  Copyright (c) 2020, ISSuh
 * 
 */

#ifndef SRPC_SERVER_HPP_
#define SRPC_SERVER_HPP_

namespace srpc {

class Server {
 public:
  Server() = default;
  virtual ~Server() {}
};

}  // namespace srpc

#endif  // SRPC_SERVER_HPP_
